k8s/api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-service
  namespace: arket
  labels:
    app: arket
    service: api-service
spec:
  replicas: 1
  selector:
    matchLabels:
      service: api-service
      app: arket
  template:
    metadata:
      labels:
         app: arket
         service: api-service
    
    spec: 
      containers:
          - name: api-service
          
            image: abdulwahabmsalih/arket-api:605fdf729401e6ef5c73b786d3959e52dd415aed
            imagePullPolicy: Always
            ports:
              - containerPort: 3001
                name: http
---

apiVersion: v1
kind: Service
metadata:
  name: api-service
  namespace: arket
  labels:
    app: arket
    service: api-service
spec:
  type: ClusterIP
  selector:
    service: api-service
  ports:
    - name: http
      port: 3001
      targetPort: 3001
      protocol: TCP
