k8s/worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-service
  namespace: arket
  labels:
    app: arket
    service: worker-service

spec:
  replicas: 1
  selector:
    matchLabels:
      app: arket
      service: worker-service

  template:
    metadata:
      labels:
        app: arket
        service: worker-service
    spec:
 
      containers:
        - name: worker-service
          image: abdulwahabmsalih/arket-worker:9049dfdd637d53aa16be90f5be17985118ac3201
          ports:
            - containerPort: 5000
              name: http
              protocol: TCP
---

apiVersion: v1
kind: Service
metadata:
  name: worker-service
  namespace: arket
  labels:
    app: arket
    service: worker-service
spec:
  type: ClusterIP
  selector:
    service: worker-service
  ports:
    - name: http
      port: 5000
      targetPort: 5000
      protocol: TCP
